RESOLVED FIXED116724
[BlackBerry] REGRESSION(r150071): Animation performance issues in some websites with CSS transforms
https://bugs.webkit.org/show_bug.cgi?id=116724
Summary [BlackBerry] REGRESSION(r150071): Animation performance issues in some websit...
Carlos Garcia Campos
Reported 2013-05-24 08:56:44 PDT
It seems that the animations are triggered too often after r150071 in some cases.
Attachments
Patch (4.34 KB, patch)
2013-05-24 09:08 PDT, Carlos Garcia Campos
no flags
Carlos Garcia Campos
Comment 1 2013-05-24 09:08:53 PDT
Arvid Nilsson
Comment 2 2013-05-24 10:02:05 PDT
Comment on attachment 202828 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=202828&action=review > Source/WebKit/blackberry/Api/WebPage.cpp:6343 > + m_monotonicAnimationStartTime = monotonicallyIncreasingTime(); currentTime and monotonicallyIncreasingTime() ärr two incompatible time coordinate systems... > Source/WebKit/blackberry/Api/WebPage.cpp:6382 > + m_mainFrame->view()->serviceScriptedAnimations(monotonicAnimationStartTime); ...so which time coordinate system does serviceScriptedAnimations expect anyway? I noticed you used currentTime() in the previous patch...
Carlos Garcia Campos
Comment 3 2013-05-24 10:15:45 PDT
(In reply to comment #2) > (From update of attachment 202828 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=202828&action=review > > > Source/WebKit/blackberry/Api/WebPage.cpp:6343 > > + m_monotonicAnimationStartTime = monotonicallyIncreasingTime(); > > currentTime and monotonicallyIncreasingTime() ärr two incompatible time coordinate systems... This is what display refresh monitor does, that's why I changed it.
Arvid Nilsson
Comment 4 2013-05-24 10:27:47 PDT
Alright, monotonic it is then! LGTM.
Rob Buis
Comment 5 2013-05-27 08:38:58 PDT
Comment on attachment 202828 [details] Patch Looks good.
WebKit Commit Bot
Comment 6 2013-05-27 08:50:59 PDT
Comment on attachment 202828 [details] Patch Clearing flags on attachment: 202828 Committed r150760: <http://trac.webkit.org/changeset/150760>
WebKit Commit Bot
Comment 7 2013-05-27 08:51:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.