[BlackBerry] REGRESSION(r150071): Animation performance issues in some websites with CSS transforms https://bugs.webkit.org/show_bug.cgi?id=116724

Patch by Carlos Garcia Campos <cgarcia@igalia.com> on 2013-05-27
Reviewed by Rob Buis.

Add another bool variable m_previousFrameDone to make sure we
don't start a new frame until the previous one has been done. Also
make sure we pass the animation start time to
serviceScriptedAnimations().

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::WebPagePrivate): Initialize
m_previousFrameDone and m_monotonicAnimationStartTime.
(BlackBerry::WebKit::WebPagePrivate::animationFrameChanged):
Return early if previous frame is not done. Otherwise set
m_previousFrameDone to false and save the animation start time.
(BlackBerry::WebKit::WebPagePrivate::serviceAnimations): Call
serviceScriptedAnimations() passing the saved animation start time
and reset m_animationScheduled and m_previousFrameDone.
(BlackBerry::WebKit::WebPagePrivate::handleServiceScriptedAnimationsOnMainThread):
Call WebPagePrivate::serviceAnimations().
* Api/WebPage_p.h:
(WebPagePrivate):

Canonical link: https://commits.webkit.org/135128@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150760 268f45cc-cd09-0410-ab3c-d52691b4dbfc